--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,28 @@ services:
       target: development
     volumes:
       - .:/app
+    depends_on:
+      - database
+    networks:
+      - go-ci-cd_net
     ports:
       - 8000:8000
+  database:
+    image: postgres
+    restart: always
+    hostname: db
+    networks:
+      - go-ci-cd_net
+    env_file:
+      - .env
+    ports:
+      - "3000:5432"
+    volumes:
+      - db-data:/var/lib/postgresql/data
+
+volumes:
+  db-data:
+
+networks:
+  go-ci-cd_net:
+    driver: bridge
