--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   install: 
     runtime-versions:
-      golang: 1.18
+      golang: latest
     commands:
       - go get -u github.com/golang/lint/golint
 
