--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -74,7 +74,7 @@ jobs:
       with:
         task-definition: task-definition.json
         container-name: ${{ env.CONTAINER_NAME }}
-        image: 090426658505.dkr.ecr.ap-southeast-2.amazonaws.com/golang:latest
+        image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
